--- a/views/setting.html
+++ b/views/setting.html
@@ -3,7 +3,6 @@
   <head>
   <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>画像認識センサー環境設定</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <script src="js/jquery-3.1.1.min.js"></script>
@@ -13,63 +12,316 @@
 <div class="container">
 	<h3>画像認識センサー環境設定</h3>
 	<form>
-	<button type="reset" class="btn btn-success" id="clear">表示クリア</button>
-	<button type="button" class="btn btn-success" id="initialize">登録内容初期化</button>
-	<p>　</p>
-	<table class="table table-bordered table-condensed">
+	<div>
+	<span>
+		<button type="reset" class="btn btn-success" id="clear">表示クリア</button>
+		<button type="button" class="btn btn-success" id="initialize">登録内容初期化</button>
+	</span>
+	<span class="pull-right">
+		<button type="button" class="btn btn-success" id="initialize">登録</button>
+	</span>
+    </div>
+	<br/>
+	<table class="table table-sm">
 		<thead>
-			<tr class="active"><th colspan="2">基本情報設定</th></tr>
+			<tr class="info"><th colspan="2">基本情報設定</th></tr>
 		</thead>
 		<tbody>
 		<tr>
 			<td class="col-md-3">標準ARMサーバー</td>
 			<td class="col-md-9">
-				<div class="form-group col-xs-4"><input type="text" name="default-arm-server" class="form-control" value="<?php echo $DEFAULT_ARM_SERVER ?>"></div>
+				<div class="form-group col-xs-3"><input type="text" name="default-arm-server" class="form-control input-sm" value="<% echo(default_arm_server) %>"></div>
 			</td>
 		</tr>
 		<tr>
 			<td>データARMサーバー</td>
-			<td><div class="form-group col-xs-4"><input type="text" name="default-arm-server" class="form-control" value="<?php echo $DATA_ARM_SERVER ?>"></div></td>
+			<td><div class="form-group col-xs-3"><input type="text" name="default-arm-server" class="form-control input-sm" value="<% echo(data_arm_server) %>"></div></td>
 		</tr>
 		<tr>
 			<td>ARMルーター番号</td>
-			<td><div class="form-group col-xs-7"><input type="text" name="default-arm-server" class="form-control" value="<?php echo $ARM_ROUTER_NO ?>"></div></td>
+			<td><span class="form-group col-xs-7"><input type="text" name="default-arm-server" class="form-control input-sm" value="<% echo(arm_router_no) %>"></span></td>
 		</tr>
 		<tr>
 			<td>画像認識センサー番号</td>
-			<td><div class="form-group col-xs-7"><input type="text" name="default-arm-server" class="form-control" value="<?php echo $PIC_SENSOR_NO ?>"></div></td>
+			<td><div class="form-group col-xs-7"><input type="text" name="default-arm-server" class="form-control input-sm" value="<% echo(pic_sensor_no) %>"></div></td>
 		</tr>
 		</tbody>
 	</table>
 
 	<table class="table table-bordered table-condensed">
 		<thead>
-			<tr class="active"><th colspan="2">スケジュール設定</th></tr>
+			<tr class="info"><th colspan="7">スケジュール設定</th></tr>
 		</thead>
 		<tbody>
 		<tr>
-			<td class="col-md-4">センサー死活監視インターバル</td>
-			<td class="col-md-8"><div class="form-group col-xs-4"><input type="text" name="default-arm-server" class="form-control"></div></td>
+			<td class="col-md-3">センサー死活監視インターバル</td>
+			<td class="col-md-1">
+				<select>
+				    <option>a</option>
+				    <option>b</option>
+				    <option>c</option>
+				</select>
+			</td>
+			<td class="col-md-1">
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td class="col-md-1">
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td class="col-md-1">
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td class="col-md-1">
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td class="col-md-1">
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
 		</tr>
 		<tr>
 			<td>ドアセンサー死活監視インターバル</td>
-			<td><div class="form-group col-xs-4"><input type="text" name="default-arm-server" class="form-control"></div></td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
 		</tr>
 		<tr>
 			<td>死活監視（ARMサーバー間）</td>
-			<td><div class="form-group col-xs-7"><input type="text" name="default-arm-server" class="form-control"></div></td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
 		</tr>
 		<tr>
 			<td>設定変更問合せ</td>
-			<td><div class="form-group col-xs-7"><input type="text" name="default-arm-server" class="form-control"></div></td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
 		</tr>
 		<tr>
 			<td>画像認識センサー再起動</td>
-			<td><div class="form-group col-xs-7"><input type="text" name="default-arm-server" class="form-control"></div></td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
 		</tr>
 		<tr>
 			<td>タイトルなし？？</td>
-			<td><div class="form-group col-xs-7"><input type="text" name="default-arm-server" class="form-control"></div></td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
+			<td>
+				<select class="selectpicker">
+				    <option>Mustard</option>
+				    <option>Ketchup</option>
+				    <option>Relish</option>
+				</select>
+			</td>
 		</tr>
 		</tbody>
 	</table>
