--- a/templates/setting.html
+++ b/templates/setting.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
-  <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>画像認識センサー環境設定</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-  </head>
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>画像認識センサー環境設定</title>
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<script src="js/jquery-3.1.1.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script type="text/javascript">
+$(function(){
+    $('#regist').click(function() {
+        alert('aaa');
+    });
+});
+</script>
+</head>
 <body>
 <div class="container">
 	<h3>画像認識センサー環境設定</h3>
@@ -18,7 +25,7 @@
 		<button type="button" class="btn btn-success" id="initialize">登録内容初期化</button>
 	</span>
 	<span class="pull-right">
-		<button type="button" class="btn btn-success" id="initialize">登録</button>
+		<button type="button" class="btn btn-success" id="regist">登録</button>
 	</span>
     </div>
 	<br/>
