--- a/templates/setting.html
+++ b/templates/setting.html
@@ -9,23 +9,74 @@
 <script src="js/bootstrap.min.js"></script>
 <script type="text/javascript">
 $(function(){
-    $('#regist').click(function() {
-        $('#settingform').submit();
+    $('#registform').submit(function(event) {
+        event.preventDefault();
+        var $form = $(this);
+        var $registButton = $('#regist');
+        $.ajax({
+            url: $form.attr('action'),
+            type: $form.attr('method'),
+            data: $form.serialize(),
+            timeout: 10000,
+            beforeSend: function(xhr, settings) {
+                $registButton.attr('disabled', true);
+            },
+            complete: function(xhr, textStatus) {
+                $registButton.attr('disabled', false);
+            },
+            success: function(result, textStatus, xhr) {
+                alert('登録しました。');
+            },
+            error: function(xhr, textStatus, error) {
+                alert('登録が失敗しました。再度お試し下さい。');
+            }
+        });
     });
+
+    $('#initialize').click(function() {
+        if (confirm('初期設定に戻しますか？')) {
+          var $form = $(this);
+          var $initButton = $('#initialize');
+          $.ajax({
+              url: 'setting.php',
+              type: 'POST',
+              data: {'action_no': 2},
+              timeout: 10000,
+              beforeSend: function(xhr, settings) {
+                  $initButton.attr('disabled', true);
+              },
+              complete: function(xhr, textStatus) {
+                  $initButton.attr('disabled', false);
+              },
+              success: function(result, textStatus, xhr) {
+                  alert('登録内容を初期化しました');
+              },
+              error: function(xhr, textStatus, error) {
+                  alert('登録内容初期化に失敗しました。再度お試し下さい。');
+              }
+          });
+        }
+    })
+
+    $('#clear').click(function() {
+        if (confirm('前回登録内容に戻しますか？')) {
+            $('#registform')[0].reset();
+        }
+    })
 });
 </script>
 </head>
 <body>
 <div class="container">
 	<h3>画像認識センサー環境設定</h3>
-	<form action="setting.php" method="post" id="settingform">
+	<form id="registform" action="setting.php" method="post" id="settingform">
 	<div>
 	<span>
-		<button type="reset" class="btn btn-success" id="clear">表示クリア</button>
+		<button type="button" class="btn btn-success" id="clear">表示クリア</button>
 		<button type="button" class="btn btn-success" id="initialize">登録内容初期化</button>
 	</span>
 	<span class="pull-right">
-		<button type="button" class="btn btn-success" id="regist">登録</button>
+		<button type="submit" class="btn btn-success" id="regist">登録</button>
 	</span>
     </div>
 	<br/>
